# python-rpg-questbook

./: .gitignore  COURSE_MAP.md  README.md  pyproject.toml
level_1_python_basics/: main.py
level_2_oop_and_design/: README.md
level_2_oop_and_design/starter_legacy_rpg/: README.md  main.py
level_3_validation_and_persistence/: README.md
level_3_validation_and_persistence/starter_raw_rpg/: main.py
level_4_interfaces/: README.md
level_4_interfaces/starter_verbose_rpg/: main.py
missions/01_hero_stats/: README.md  check.py  task.py
missions/02_damage_and_healing/: README.md  check.py  task.py
missions/03_choose_your_hero/: README.md  check.py  task.py
missions/04_combat_loop/: README.md  check.py  task.py
missions/05_arena_challenge/: check.py  task.py
missions/06_hero_inventory/: README.md  check.py
missions/07_monster_dictionary/: check.py  task.py
missions/08_attack_function/: README.md  check.py  task.py
missions/09_dice_rolls/: README.md  check.py
missions/10_safe_input/: check.py
missions/11_combat_log/: README.md  check.py
missions/12_save_game/: check.py  task.py
missions/13_split_the_game/: README.md  check.py  combat.py  task.py
missions/14_hero_dataclass/: check.py  task.py
missions/15_test_the_damage/: check.py  combat.py  test_combat.py
missions/16_dice_are_data/: README.md  check.py  task.py
missions/17_damage_distributions/: check.py  task.py
missions/18_read_combat_logs/: check.py  task.py
missions/19_filter_and_group/: battles_log.csv  check.py
tools/: author_check.py  course_status.py
(+179 files in other folders)
